Update missing view

--- a/app/assets/stylesheets/app/b-buttons.css.erb
+++ b/app/assets/stylesheets/app/b-buttons.css.erb
@@ -16,9 +16,10 @@
 }
 
 .b-button_social .ui-icon {
+  background-image: url(<%= asset_path 'socials.png' %>); 
 }              
                
-.ui-icon-ok {    
+.ui-icon-odnoklassniki {    
 	background-position: -16px 0;
 }   
 
@@ -26,19 +27,18 @@
 	background-position: -32px 0;
 }      
       
-.ui-icon-yandex {    
+.ui-icon-twitter {    
 	background-position: -48px 0;
 } 
 
-.ui-icon-twitter {    
+.ui-icon-google {    
 	background-position: -64px 0;
 }                         
 
-.ui-icon-google {    
-	background-position: -80px 0;
+.ui-icon-mailru {
+  background-position: -80px 0;
 }
 
-/* Common styles */
 
 .b-button-type-a {
 	-moz-box-shadow:inset 0px 0px 0px 1px #a1527d;
