--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -83,7 +83,7 @@
 	
 .b-missing__i_saw {
 	width: 90%;
-	margin: 0 5% 9px;
+	margin: 10px 5% 9px;
 }           
 	div.b-missing__i_saw_in {
 		padding: 0 .5em .5em;
@@ -99,11 +99,6 @@
 	}                    
 	
 
-.b-missing__photo { 
-	width: 100%;        
-	margin-bottom: 3px;
-}
-
 .b-missing__center {
 	margin-left: 2%;
 	float: left;  
@@ -114,25 +109,25 @@
 	//margin-right: -100%;
 }
 
-.b-missing__photos .b-list__element {
-	margin: 1.5em 20px 0 0; 
-	width: 100px;
-	min-width: 100px;
-	height: 100px;
+.b-missing__photo {
+  border-bottom: 1px solid #fff;
+
+  margin-bottom: 10px;
 }
 
-	.b-missing__photos .b-list__image {
-		width: 100px;
-	}
-	
-	.b-missing__photos .b-list__element_min {
-		margin: 0 0 100px 0;
+.b-missing__photo_image {
+  width: 100%;
+  display: block;
+}
 
-		height: 4em;
+.b-missing__photos {
+  list-style: none;
+  margin: 0 10px;
+}
 
-		width: 150px;
-	}
-	
+.b-missing__photos_photo { 
+    margin-right: 5px;
+  }
 
 .b-missing__rightside {
 	padding: 10px 20px 15px !important;
@@ -220,7 +215,7 @@ div.b-missing__share {
 	width: 400px;
 }
 
-.b-missing__comment_header {
+.b-missing__comments_header {
   margin-top: 2em;
 }
 
