Кнопки на главной. Исправления главной. Кнопка печати объявления + небольшие правки.

--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -164,7 +164,7 @@ div.b-missing__share {
 }
 
 .b-missing__map_border {
-  border: 1px solid rgba(0,0,0,.2);
+  border: 2px solid rgba(0,0,0,.2);
   background-clip: border-box;
   background-image: url(<%= asset_path "map_bg.png" %>);
   margin-bottom: 10px;
@@ -513,4 +513,27 @@ div.b-missing__tabs {
 		list-style: none;     
 		margin: 0 0 15px;
 		
+	}
+
+.b-missing__wanted_h{
+	display: inline;
+}
+
+.b-missing__print_ad{
+	position: relative; 
+	display: inline; 
+	float: right;
+
+	height: 23px; 
+	padding: 5px 5px;
+
+	top: -5px;
+	background: #f8f8f8;
+}
+
+	.b-missing__print_ad img{
+		position: relative;
+		top: 3px;
+		width: 16px;
+		height: 16px;
 	}
