--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -71,6 +71,7 @@
 
 
 <!-- We suggest -->
+<div style="clear: both;"></div>
 
 <div class="p-main-suggest">
 
@@ -80,5 +81,4 @@
 
 </div>
 </div>
-
 
