--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -11,7 +11,7 @@ var questions = <%= @questions.to_json.html_safe %>;
 			</div>
 		</div>       
 		<div class="b-form__questions_finish l-hidden">
-			<div class="t-medium ">Спасибо за ответы. У нас к вам есть еще вопросы, мы их зададим после размещения объявления.</div> 
+			<div class="t-medium">Спасибо за ответы. У нас к вам есть еще вопросы, мы их зададим после размещения объявления.</div> 
 			<p><br>Переходите к следующему шагу</p>    
 		</div>
 	</div>
@@ -20,9 +20,14 @@ var questions = <%= @questions.to_json.html_safe %>;
 
 <div class="container_16 b-missing">
 	<div class="grid_11">
-		<div class="t-big_fat">
+		<div class="t-big_fat b-missing__wanted_h">
 			Разыскивается <%= @missing.name %><% unless @missing.ages.nil? %>, <%= @missing.ages %> <%= Russian.p @missing.ages, 'год', 'года', 'лет' %> <% end %>
 		</div>
+
+		<div class="b-missing__print_ad">
+			<img src=""> <a href="#">Печать объявления</a>
+		</div>
+
         <div class="t-medium b-missing__date_location">
           <%= @missing.gender ? 'Пропал' : 'Пропала' %> <%= Russian.strftime @missing.last_seen, "%d %B" %> в <%= YandexInflect.inflections(@missing.location_of_missing).last %>
         </div>
