--- a/app/assets/stylesheets/app/p-main.css
+++ b/app/assets/stylesheets/app/p-main.css
@@ -4,7 +4,7 @@
 
 
 /* Common elements */
-               
+
 .b-main-info-margin {
 	margin-right: 3.8%;
 }        
@@ -44,11 +44,16 @@
 	z-index: 2;
 }
 
-.p-main-suggest {
+	/* Opera hack */
+	noindex:-o-prefocus, .p-main-img-pointer {
+		top: 3px;
+	}
+  
+.p-main-suggest{
 	position: relative;
 	float: left;
                         
-	min-height: 400px;
+	height: 38%;
 	width: 100%;
 
 	padding: 30px 0px 20px 0px;
