--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@ html, body, #wrapper {
     min-width: 1024px;
 }
 
-body > #wrapper { height: auto; min-height: 100%; }     
+body > #wrapper { height: auto; min-height: 100%;}     
 /*body > #wrapper { height: auto; min-height: 0%; }*/
 
 p {
@@ -33,7 +33,7 @@ p {
 } 
 
 #wrapper { 
-   margin-bottom: -35px;  
+   margin-bottom: -35px;
 }
                
 /* must be same height as the footer */
@@ -44,7 +44,7 @@ p {
     height: 35px;
     clear: both;      
     
-	margin-top: 35px;
+	/*margin-top: 35px;*/
 } 
 	#footer .b-hr {
 		margin: 0;
