--- a/app/assets/stylesheets/app/p-main.css
+++ b/app/assets/stylesheets/app/p-main.css
@@ -53,7 +53,8 @@
 	position: relative;
 	float: left;
                         
-	height: 38%;
+	/*height: 38%;*/
+	height: 500px;
 	width: 100%;
 
 	padding: 30px 0px 20px 0px;
