--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container_16 b-report">
+<div class="container_16 b-report b-content">
 	<div class="grid_11">
 		<div class="b-sidebar">
 		    <div class="l-left">К сожалению, у анкеты мало посещений, попробуйте еще рассказать о случившемся в социальных сетях:</div>
