--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -574,3 +574,35 @@ input[type="text"] {
 .b-form__question_map_item:hover {
 	color: red;
 }
+
+
+/* Select field */
+.b-select__list {
+	list-style: none;
+	margin: 0;
+
+	background: #f5f5f5;
+
+	-webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, .2);
+	-moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, .2);
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, .2);
+
+	z-index: 100;
+}
+
+.b-select__list_item {
+	padding: 6px 9px;
+	cursor: pointer;
+
+	border: 1px solid #f5f5f5;
+	border-left: 0;
+	border-right: 0;
+}
+
+.b-select__list_item:hover {
+	background: #ebebeb;
+
+	border: 1px solid #e0e0e0;
+	border-left: 0;
+	border-right: 0;
+}
