--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -591,12 +591,17 @@ input[type="text"] {
 }
 
 .b-select__list_item {
-	padding: 6px 9px;
+    display: block;
+	padding: 4px 9px;
+
+    color: #000;
 	cursor: pointer;
 
 	border: 1px solid #f5f5f5;
 	border-left: 0;
 	border-right: 0;
+
+    text-decoration: none;
 }
 
 .b-select__list_item:hover {
@@ -605,4 +610,6 @@ input[type="text"] {
 	border: 1px solid #e0e0e0;
 	border-left: 0;
 	border-right: 0;
+
+    color: #000;
 }
