--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,11 +88,11 @@
 	</div>  
     <div class="b-head__auth grid_3">  
 		<button class="b-auth__button loggedin maroon l-right" provider="<%= current_user.provider %>"><%= current_user.name %></button>	
-		<ul class="b-auth__list b-select__list ui-corner-bottom l-hidden">
-			<li class="b-select__list_item">Настройки</li>
-			<li class="b-select__list_item">Помощь</li>
-			<li class="b-select__list_item">Выйти</li>
-		</ul>
+		<div class="b-auth__list b-select__list ui-corner-bottom l-hidden">
+			<a class="b-select__list_item">Настройки</a>
+			<a class="b-select__list_item">Помощь</a>
+            <%= link_to "Выйти", destroy_user_session_path, :method => :delete, :class => "b-select__list_item" %>
+		</div>
 	</div>                 
 	<div class="clear"></div>
 	<div class="grid_10 b-missing__tabs">
