--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,9 +112,10 @@
  </div>
 <% end %>    
 
-  <div class="clear"></div> 
+  <div class="clear"></div>
+  <div id="content">
   <%= yield %> <!--! end of #container -->
-
+  </div>
   <div class="clear"></div>
 
 </div>
