--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -1241,6 +1241,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 		outline: 0 none;
 
 		height: 23px;
+        padding: 2px 8px 1px;
 
 		width: 200px;
 		z-index: 3;
@@ -1248,7 +1249,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 	}
 
 	.ui-autocomplete{
-		border: none;
+		border: 1px solid rgba(0,0,0,.2);
 		padding: 0px;
 		box-shadow: 0px 1px 3px 1px #c0bfbf;
 		border-radius: 0px 0px 3px 3px;
@@ -1273,28 +1274,24 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 	}
 
 	.ui-menu-item{
-		height: 23px;
-		border-bottom: 1px solid #e2e2e2;
+        border: none;
+        border-bottom: 1px solid #e2e2e2;
+
 		color: #000;
 		font-size: 13px;
 
-
-
+        cursor: pointer;
 	}
+
 		.ui-menu-item a{
 			color: #000;
-			padding-left: 10px;
+            padding: 4px 9px;
 		}
 		
 
 		#ui-active-menuitem{
+            margin: 0;
 			background: #ececec;
 
-			height: 23px;
-
-			border: none;
-			border-bottom: 1px solid #e2e2e2;
-			border-left: 1px solid #c0bfbf;
-			border-right: 1px solid #c0bfbf;
-			border-radius: 0px;
+            border: none;
 		}
