--- a/app/views/missings/index.html.erb
+++ b/app/views/missings/index.html.erb
@@ -1,46 +1,60 @@
-<style type="text/css" media="screen">
-	.b-header { margin-top: 8px; }
-</style>
-<div class="container_16 b-content">
-	
-<div class="grid_11">
-	<div class="b-header">
-		Эти люди пропали <a href="#">Москве</a>
-	</div>
 
-<%= render :partial => 'missings_list' %>
+<div class="p-search container_16">
+<%= form_for @search, :url => "/missings", :method => :get do |f| %>
+    <div class="b-search__big">
+      <%= f.label :keywords, "Поиск по объявлениям", :class => "b-search__big_label l-block t-big" %>
+      <%= f.text_field :keywords, :placeholder => "Имя, регион, тип пропажи", :class => "b-search__big_field t-medium" %>
+      <%= f.submit "Найти", :name => nil, :class => "t-medium silver" %>
+    </div>
+    <div class="b-search-filter ui-corner-all b-sidebar">
+      <ul class="b-search-filter-list">
+        <li class="b-search-filter-list__item">
+          <%= f.label :region, "Регион пропажи", :class => "b-form__label" %>
+          <%= f.text_field :region, :class => "b-search-filter-list__text_field" %>
+        </li>
+        <li class="b-search-filter-list__item">
+          <div class="b-form__label">Пол</div>
+          <%= f.radio_button :male, nil  %><%= f.label :male, "любой" %><br/>
+          <%= f.radio_button :male, true  %><%= f.label :male_true, "мужской" %><br/>
+          <%= f.radio_button :male, false %><%= f.label :male_false, "женский" %><br/>
+        </li>
+        <li class="b-search-filter-list__item">
+          <div class="b-form__label">Возраст</div>
+          <%= radio_button_tag 'ages', nil, f.object.maximum_age.nil? && f.object.minimum_age.nil? ? true : false %> <%= label_tag 'ages_', 'любой' %><br/>
+          <%= radio_button_tag 'ages', 'children', f.object.minimum_age == 1 && f.object.maximum_age == 18 ? true : false, :minimum_age => 1, :maximum_age => 18 %> <%= label_tag 'ages_children', 'ребенок' %><br/>
+          <%= radio_button_tag 'ages', 'adult', f.object.minimum_age == 18 && f.object.maximum_age == 50 ? true : false, :minimum_age => 18, :maximum_age => 50 %> <%= label_tag 'ages_adult', 'взрослый' %><br/>
+          <%= radio_button_tag 'ages', 'eldery', f.object.minimum_age == 50 && f.object.maximum_age.nil? ? true : false, :minimum_age => 50 %> <%= label_tag 'ages_eldery', 'пожилой' %><br/>
+          <div class="b-search-filter__ages_container">
+            <%= f.text_field :minimum_age, :class => "b-search-filter__ages" %> - <%= f.text_field :maximum_age, :class => "b-search-filter__ages" %><br/>
+          </div>
+        </li>
+        <li class="b-search-filter-list__item">
+          <div class="b-form__label">Регион пропажи</div>
+          <%= f.radio_button :region_type, nil %><%= f.label :region_type, "любой" %><br/>
+          <%= f.radio_button :region_type, 1 %><%= f.label :region_type_1, "город"  %><br/>
+          <%= f.radio_button :region_type, 2 %><%= f.label :region_type_2, "лес" %><br/>
+        </li>
+        <li class="b-search-filter-list__item">
+          <div class="b-form__label">Дата пропажи</div>
+          <%= f.text_field :last_seen, :value => @search.last_seen_string, :class => "daterangepicker b-search-filter-list__text_field" %>
+        </li>
+      </ul>
 
-</div>
-<div class="grid_5  b-rightside">
-	<div class="b-sidebar p-detective-search__filter">
-		<div class="b-sidebar__header">
-			Расширенный поиск
-		</div>
-		<br>
-		<%= label_tag 'filter-city', 'Город', :class => "b-form__label" %>
-		<%= select_tag 'filter-city', '<option>Москва</option>'.html_safe %>
-		<br>
-		<%= select_tag 'filter-sex', '<option>Любой пол</option><option>Мужской</option><option>Женский</option>'.html_safe %>
-		<%= label_tag 'filter-age', 'Возраст', :class => "b-form__label" %>
-		<%= select_tag 'filter-age', '<option>Любой</option>'.html_safe %> - <%= select_tag 'filter-age2', '<option>Любой</option>'.html_safe %>
-		<br>
-		<%= select_tag 'filter-ageyear', '<option>Год рождения</option>'.html_safe %>
-		<div class="b-sidebar__hr"></div>
-		<%= check_box_tag 'psy' %>
-		<%= label_tag 'psy', 'Психически не здоров' %>	
-		<br>
-		<%= check_box_tag 'nark' %>
-		<%= label_tag 'nark', 'Накроман' %>	
-		<div class="b-sidebar__hr"></div>
-		<%= check_box_tag 'am' %>
-		<%= label_tag 'am', 'Ушел из дома сам' %>
-		<br>
-		<%= check_box_tag 'nam' %>
-		<%= label_tag 'nam', 'Пропал неожиданно' %>	
+      <div class="clear"></div>
 
-		<br><br>
-		<%= button_to 'Показать', new_missing_path  %>
-	</div>
-</div>
+      <div class="b-sidebar__hr_100"></div>
+      <div class="b-sidebar__hr_margin"></div>
 
+      <%= f.check_box :with_photo %> <%= f.label :with_photo, "Только с фотографией" %>
+
+      <div class="b-sidebar__hr_100"></div>
+      <div class="b-sidebar__hr_margin"></div>
+
+      <%= f.submit "Показать", :name => nil ,:class => "silver" %>
+
+      <div class="clear"></div>
+    </div>
+<% end %>
+
+<%= render 'missings_list' %>
 </div>
