--- a/app/views/missings/new.html.erb
+++ b/app/views/missings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container_16 b-content">
+<div class="p-new-missing container_16 b-content">
 	
 <div class="grid_10">
 <div class="b-header">
