--- a/app/views/missings/_missings_list.html.erb
+++ b/app/views/missings/_missings_list.html.erb
@@ -1,1 +1,23 @@
-<% @missings
+<div class="b-search-result">
+	<% @missings.each do |missing| %>
+	  <div class="b-search-result__item">
+		<div class="b-search-result__photo l-left">
+			<a href="<%= missing_path(missing) %>/">
+			<% unless missing.photos.first %>
+              <%= image_tag 'no_photo.jpg', :size => "65x65", :class => "b-search-result__photo" %>
+			<% else %>
+              <%= image_tag missing.photos.first.photo.url(:small), :size => "65x65", :class => "b-search-result__photo" %>
+			<% end %>
+			</a>
+		</div>
+        <div class="b-search-result__description">
+          <a href="<%= missing_path(missing) %> /" class="b-search-result__name"><%= missing.name %></a>
+          <% unless missing.age.nil? %> <p class="b-search-result__field"><%= missing.age %> <%= Russian.p missing.age, 'год', 'года', 'лет' %> </p> <% end %>
+          <% unless missing.last_seen.nil? %> <p class="b-search-result__field"><%= missing.gender ? 'Пропал' : 'Пропала' %> <%= Russian.strftime missing.last_seen, "%d %B" %> в <%= YandexInflect.inflections(missing.city).last %></p> <% end %>
+        </div>
+      </div>
+      <div class="clear"></div>
+      <hr>
+	<% end %>
+</div>
+
