--- a/app/views/missings/index.html.erb
+++ b/app/views/missings/index.html.erb
@@ -1,22 +1,22 @@
 
 <div class="p-search container_16">
 <%= form_for @search, :url => "/missings", :method => :get do |f| %>
-    <div class="b-search__big">
-      <%= f.label :keywords, "Поиск по объявлениям", :class => "b-search__big_label l-block t-big" %>
-      <%= f.text_field :keywords, :placeholder => "Имя, регион, тип пропажи", :class => "b-search__big_field t-medium" %>
-      <%= f.submit "Найти", :name => nil, :class => "t-medium silver" %>
-    </div>
+    <div class="t-big">Поиск по объявлениям</div>
     <div class="b-search-filter ui-corner-all b-sidebar">
+      <div class="b-search-filter__name">
+        <%= f.label :keywords, "Имя, фамилия или отчество", :class => "b-form__label" %>
+        <%= f.text_field :keywords, :placeholder => "Имя, регион, тип пропажи", :class => "b-search-filter__name" %>
+      </div>
+
+      <div class="clear"></div>
+
+      <div class="b-sidebar__hr_100"></div>
+      <div class="b-sidebar__hr_margin"></div>
+
       <ul class="b-search-filter-list">
         <li class="b-search-filter-list__item">
-          <%= f.label :region, "Регион пропажи", :class => "b-form__label" %>
-          <%= f.text_field :region, :class => "b-search-filter-list__text_field" %>
-        </li>
-        <li class="b-search-filter-list__item">
           <div class="b-form__label">Пол</div>
-          <%= f.radio_button :male, nil  %><%= f.label :male, "любой" %><br/>
-          <%= f.radio_button :male, true  %><%= f.label :male_true, "мужской" %><br/>
-          <%= f.radio_button :male, false %><%= f.label :male_false, "женский" %><br/>
+          <%= f.select :male, [ ["любой", nil], ["мужской", true], ["женский", false] ] %>
         </li>
         <li class="b-search-filter-list__item">
           <div class="b-form__label">Возраст</div>
@@ -29,14 +29,26 @@
           </div>
         </li>
         <li class="b-search-filter-list__item">
-          <div class="b-form__label">Регион пропажи</div>
-          <%= f.radio_button :region_type, nil %><%= f.label :region_type, "любой" %><br/>
-          <%= f.radio_button :region_type, 1 %><%= f.label :region_type_1, "город"  %><br/>
-          <%= f.radio_button :region_type, 2 %><%= f.label :region_type_2, "лес" %><br/>
-        </li>
-        <li class="b-search-filter-list__item">
           <div class="b-form__label">Дата пропажи</div>
           <%= f.text_field :last_seen, :value => @search.last_seen_string, :class => "daterangepicker b-search-filter-list__text_field" %>
+        </li>
+      </ul>
+
+      <div class="clear"></div>
+
+      <div class="b-sidebar__hr_100"></div>
+      <div class="b-sidebar__hr_margin"></div>
+
+      <ul class="b-search-filter-list">
+        <li class="b-search-filter-list__item">
+          <%= f.label :region, "Регион пропажи", :class => "b-form__label" %>
+          <%= f.text_field :region, :class => "b-search-filter-list__text_field" %>
+        </li>
+        <li class="b-search-filter-list__item">
+          <div class="b-form__label">Местность пропажи</div>
+          <%= f.radio_button :region_type, nil %><%= f.label :region_type, "любая" %> 
+          <%= f.radio_button :region_type, 1 %><%= f.label :region_type_1, "город" %>
+          <%= f.radio_button :region_type, 2 %><%= f.label :region_type_2, "лес" %>
         </li>
       </ul>
 
@@ -50,7 +62,7 @@
       <div class="b-sidebar__hr_100"></div>
       <div class="b-sidebar__hr_margin"></div>
 
-      <%= f.submit "Показать", :name => nil ,:class => "silver" %>
+      <%= f.submit "Показать", :name => nil ,:class => "t-medium silver" %>
 
       <div class="clear"></div>
     </div>
