--- a/app/assets/stylesheets/app/style.css
+++ b/app/assets/stylesheets/app/style.css
@@ -74,7 +74,7 @@ pre, code, kbd, samp { font-family: monospace, sans-serif; }
 html { overflow-y: scroll; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; }
   
 /* j.mp/webkit-tap-highlight-color */
-a:link { -webkit-tap-highlight-color: #FF5E99s; }
+a:link { -webkit-tap-highlight-color: #FF5E99; }
 
 /* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active { outline: none; }
